fix: Update Java 21 JVM option from GenerationalZGC to ZGenerational
The GenerationalZGC option syntax changed in Java 21. The correct flag
is now -XX:+ZGenerational instead of -XX:+GenerationalZGC. This fix
ensures compatibility with Java 21 in CI environments.

- Updated README.md example
- Fixed test configuration in jvm-version-opts test
- Updated validation logic to check for ZGenerational

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>