@@ -13,7 +13,7 @@ packJvmVersionSpecificOpts := Map(
     8 -> Seq("-XX:MaxPermSize=256m"),
     11 -> Seq("-XX:+UnlockExperimentalVMOptions", "-XX:+UseJVMCICompiler"),
     17 -> Seq("-XX:+UseZGC"),
-    21 -> Seq("-XX:+UseZGC", "-XX:+GenerationalZGC"),
+    21 -> Seq("-XX:+UseZGC", "-XX:+ZGenerational"),
     24 -> Seq("-XX:+UseG1GC", "-XX:G1HeapRegionSize=32m", "--sun-misc-unsafe-memory-access=allow")
   )
 )
